Replace Apache PUT by java.io equivalent